--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             >University of Pittsburgh</span
                         >
                         where I'm studying <span class="about__text-bold">Computer Science</span> with a minor in History.
-                        Currently, I just started working in the ADMT lab and started my capstone doing directed research for Assistant Professor Aakash.
+                        Currently, I just started my capstone doing directed research for Assistant Professor Aakash and working in the ADMT lab.
                         In my spare time, I’m the Branch leader at the Pitt Computer Science Club, a member of the wearable haptics project at the 
                         Pitt Robotics and Automation Society, and the Urban Gaming Club.
                         
