--- a/index.html
+++ b/index.html
@@ -102,14 +102,12 @@
                 <div class="about-container">
                     <span class="section__title">About me</span>
                     <p class="about__text">
-                        I am a undergraduate at the
+                        I am an undergraduate at the
                         <span class="about__text-pitt"
                             >University of Pittsburgh</span
                         >
                         where I'm studying <span class="about__text-bold">Computer Science</span> with a minor in History.
-                        Currently, I just started my capstone doing directed research for Assistant Professor Aakash and working in the ADMT lab.
-                        In my spare time, I’m the Branch leader at the Pitt Computer Science Club, a member of the wearable haptics project at the 
-                        Pitt Robotics and Automation Society, and the Urban Gaming Club.
+                        I have just started my capstone doing directed research for Assistant Professor Aakash and working in the ADMT lab. In my spare time, I'm the Branch leader at the Pitt Computer Science Club, a member of the wearable haptics project at the Pitt Robotics and Automation Society, and the Urban Gaming Club.
                         
                     <p class="about__text">
                         My passion is solving real-world problems, which is why I went into UX Design and, over time, picked up tools such as App and Stack Development to solve these problems. 
